# openfhe-iris-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
src/: analyze_results.py  analyze_results.txt  fhe_svm_iris  fhe_svm_iris.cpp  fhe_svm_iris.txt  fhe_svm_iris_multiclass  fhe_svm_iris_multiclass.cpp  iris_utils.cpp  iris_utils.h  results.csv
src/log/: fhe_svm_iris_multiclass.txt
